// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountCreationProgress ProgressMessageAndLink with a message and with an action 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Component
    style={
      Object {
        "maxWidth": 600,
      }
    }
  >
    <Component
      adjustsFontSizeToFit={true}
      numberOfLines={2}
    >
      A waiting message.
    </Component>
  </Component>
  <Component>
    <LinkToBlockchain
      actionId="0x1234567890123456789012345678901234567890"
    />
  </Component>
</Component>
`;

exports[`AccountCreationProgress ProgressMessageAndLink with a message and without an action 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Component
    style={
      Object {
        "maxWidth": 600,
      }
    }
  >
    <Component
      adjustsFontSizeToFit={true}
      numberOfLines={2}
    >
      A waiting message.
    </Component>
  </Component>
  <Component>
    <LinkToBlockchain
      actionId={null}
    />
  </Component>
</Component>
`;

exports[`AccountCreationProgress ProgressMessageAndLink without a message nor action 1`] = `
<Component
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Component
    style={
      Object {
        "maxWidth": 600,
      }
    }
  >
    <Component
      adjustsFontSizeToFit={true}
      numberOfLines={2}
    />
  </Component>
  <Component>
    <LinkToBlockchain
      actionId={null}
    />
  </Component>
</Component>
`;

exports[`AccountCreationProgress final state - account ready 1`] = `""`;

exports[`AccountCreationProgress initial state - before start account setup 1`] = `""`;

exports[`AccountCreationProgress waiting for setup - waiting for ETH funding 1`] = `
<ProgressMessageAndLink
  actionId="0x1234567890123456789012345678901234567890"
  key="FUNDING_WITH_ETH"
  waitingMessage="Funding account with ETH..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for MANA funding 1`] = `
<ProgressMessageAndLink
  actionId="0x1234567890123456789012345678901234567890"
  key="FUNDING_WITH_MANA"
  waitingMessage="Funding account with MANA..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for MANA funding and marketplace approval 1`] = `
Array [
  <ProgressMessageAndLink
    actionId="0x1234567890123456789012345678901234567890"
    key="FUNDING_WITH_MANA"
    waitingMessage="Funding account with MANA..."
  />,
  <ProgressMessageAndLink
    actionId="0x1234567890123456789012345678901234567890"
    key="APPROVING_MARKETPLACE"
    waitingMessage="Approving marketplace..."
  />,
]
`;

exports[`AccountCreationProgress waiting for setup - waiting for account generation 1`] = `
<ProgressMessageAndLink
  key="GENERATING_ACCOUNT"
  waitingMessage="Generating account..."
/>
`;

exports[`AccountCreationProgress waiting for setup - waiting for marketplace approval 1`] = `
<ProgressMessageAndLink
  actionId="0x1234567890123456789012345678901234567890"
  key="APPROVING_MARKETPLACE"
  waitingMessage="Approving marketplace..."
/>
`;
